# caos_project1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out  divmod.c  divmod.h  main.c
make/: defaultMakefile
src/: divmod.c
